# TODO-APP-WITH-CHATBOT

./: README.md
Python-Console-TODO-App/: CLAUDE.md  GEMINI.md  QWEN.md  README.md  main.py  pyproject.toml  pytest.ini
Python-Console-TODO-App/history/prompts/constitution/: 1-create-project-constitution.constitution.prompt.md
Python-Console-TODO-App/history/prompts/interactive-menu-mode/: 6-create-interactive-menu-spec.spec.prompt.md  7-update-cli-for-interactive-menu.green.prompt.md
Python-Console-TODO-App/history/prompts/interactive-terminal-menu/: 8-create-interactive-terminal-menu-spec.spec.prompt.md
Python-Console-TODO-App/history/prompts/phase1-todo-app/: 2-create-phase1-todo-app-spec.spec.prompt.md  3-plan-phase1-todo-app.plan.prompt.md  4-generate-phase1-todo-app-tasks.tasks.prompt.md  5-implement-phase1-todo-app.green.prompt.md
Python-Console-TODO-App/specs/001-interactive-menu-mode/: spec.md  user-stories.md
Python-Console-TODO-App/specs/001-interactive-menu-mode/checklists/: requirements.md
Python-Console-TODO-App/specs/001-phase1-todo-app/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
Python-Console-TODO-App/specs/002-interactive-terminal-menu/: user-stories.md
Python-Console-TODO-App/specs/phase1/: spec.md  user-stories.md
Python-Console-TODO-App/specs/phase1/checklists/: requirements.md
Python-Console-TODO-App/src/todo/: cli.py  models.py  storage.py
Python-Console-TODO-App/tests/: test_crud.py  test_interactive_menu.py  test_models.py  test_service.py  test_storage.py
backend/: Dockerfile  README.md  run.py  (+1 more)
(+73 files in other folders)
